data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2101.wast
;; Here's a list of 10 unique differential tests focusing on potential stack corruption in the implementations of `br_table` for WebAssembly and wizard_engine:  1. **Mismatched Arity in Nested Blocks:**    - Test a `br_table` instruction within nested `block` structures with mismatched operand types in various label targets to see if the stack is improperly unwound or corrupted.

(assert_invalid
  (module
    (func
      (block (result i32)
        (block (result i32)
          (block (result i32)
            (br_table 0 1 2 (i32.const 1))
            (i32.const 1)
          )
          (i32.add) (i32.const 2) (drop)
        )
        (i32.const 3)
        (i32.add)
      )
    )
  )
  "type mismatch"
)